[gd_scene load_steps=14 format=3 uid="uid://dwjxh6hrypua3"]

[ext_resource type="Script" uid="uid://b31epxhbt6duc" path="res://entities/vehicles/trawler/trawler.gd" id="1_byw1e"]
[ext_resource type="Texture2D" uid="uid://d1x04najel8kl" path="res://assets/art/player/trawler/trawler.png" id="4_p3rct"]
[ext_resource type="PackedScene" uid="uid://ccioahkom5fb3" path="res://entities/player/ships/turret.tscn" id="5_t1h18"]
[ext_resource type="Texture2D" uid="uid://dk2mwwmiirwag" path="res://assets/art/player/trawler/go_stick.png" id="9_08py4"]
[ext_resource type="PackedScene" uid="uid://hx0v5hqvqkmy" path="res://components/health_component/health_component.tscn" id="9_health"]
[ext_resource type="PackedScene" uid="uid://cktow4fougwxd" path="res://components/lighting/flashlight.tscn" id="10_i8mar"]
[ext_resource type="PackedScene" uid="uid://c5k8x6v4pbwi" path="res://components/speed_component/speed_component.tscn" id="10_speed"]
[ext_resource type="PackedScene" uid="uid://yenc6seu8kjb" path="res://entities/vehicles/trawler/drill.tscn" id="11_i8mar"]
[ext_resource type="PackedScene" uid="uid://bblf61bcy8jv3" path="res://entities/vehicles/trawler/ship_dock.tscn" id="11_ship_dock"]
[ext_resource type="PackedScene" path="res://components/health_bar/health_bar.tscn" id="12_health_bar"]
[ext_resource type="PackedScene" uid="uid://dptvykd5bxq0a" path="res://components/hurtbox/hurtbox_component.tscn" id="13_hurtbox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0e4k"]
size = Vector2(94, 290)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_trawler"]
properties/0/path = NodePath(".:global_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:global_rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:velocity")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_p3rct"]
polygon = PackedVector2Array(-47, -144, 47, -144, 47, 145, -48, 145)

[node name="Trawler" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_byw1e")

[node name="Drill" parent="." instance=ExtResource("11_i8mar")]
position = Vector2(0, -141)

[node name="Flashlight" parent="." instance=ExtResource("10_i8mar")]
position = Vector2(28, -300.5)
scale = Vector2(1, 1.0093749)

[node name="Flashlight2" parent="." instance=ExtResource("10_i8mar")]
position = Vector2(-28, -305)
scale = Vector2(1, 1.0188376)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_c0e4k")

[node name="EnemyHull" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHull"]
shape = SubResource("RectangleShape2D_c0e4k")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("RectangleShape2D_c0e4k")

[node name="HealthComponent" parent="." instance=ExtResource("9_health")]
max_health = 500

[node name="HealthBar" parent="." instance=ExtResource("12_health_bar")]
bar_width = 80.0
bar_height = 8.0
offset_y = 160.0

[node name="HurtboxComponent" parent="." instance=ExtResource("13_hurtbox")]

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("RectangleShape2D_c0e4k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_p3rct")

[node name="SpeedComponent" parent="." instance=ExtResource("10_speed")]
base_speed = 5.0

[node name="TurretsRoot" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="TurretsRoot"]
position = Vector2(-22, 95)

[node name="Marker2D2" type="Marker2D" parent="TurretsRoot"]
position = Vector2(22, 95)

[node name="Turret" parent="TurretsRoot" instance=ExtResource("5_t1h18")]
position = Vector2(-22, 95)

[node name="Turret2" parent="TurretsRoot" instance=ExtResource("5_t1h18")]
position = Vector2(22, 95)

[node name="ShipDock1" parent="." instance=ExtResource("11_ship_dock")]
position = Vector2(-50, 28)

[node name="ShipDock2" parent="." instance=ExtResource("11_ship_dock")]
position = Vector2(-28, 133)
dock_position = 2
home_ship_id = 1

[node name="ShipDock3" parent="." instance=ExtResource("11_ship_dock")]
position = Vector2(50, 28)
dock_position = 1
home_ship_id = 2

[node name="ShipDock4" parent="." instance=ExtResource("11_ship_dock")]
position = Vector2(28, 132)
dock_position = 3
home_ship_id = 3

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 0.05
replication_config = SubResource("SceneReplicationConfig_trawler")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_p3rct")

[node name="GoStick" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="GoStick"]
position = Vector2(-7, 128)
texture = ExtResource("9_08py4")

[node name="Marker2D" type="Marker2D" parent="GoStick"]
position = Vector2(0, 129)
